test/integration/httproute-listener-isolation-intersection/manifests/5-all/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-attaches-to-empty-hostname
spec:
  parentRefs:
  - name: gateway
    sectionName: empty-hostname
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /empty-hostname
    backendRefs:
    - name: http-echo
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-attaches-to-wildcard-example-com
spec:
  parentRefs:
  - name: gateway
    sectionName: wildcard-example-com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /wildcard-example-com
    backendRefs:
    - name: http-echo
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-attaches-to-wildcard-foo-example-com
spec:
  parentRefs:
  - name: gateway
    sectionName: wildcard-foo-example-com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /wildcard-foo-example-com
    backendRefs:
    - name: http-echo
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-attaches-to-abc-foo-example-com
spec:
  parentRefs:
  - name: gateway
    sectionName: abc-foo-example-com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /abc-foo-example-com
    backendRefs:
    - name: http-echo
      port: 80
